[fix]twitterのアドレスを変更

--- a/config.toml
+++ b/config.toml
@@ -14,5 +14,5 @@ canonifyurls = true
   photo = "images/photo.png" # optional
   profile = "images/profile.png" # optional
   cover = "images/cover.png" # optional
-  twitter = "taki_tflare" # optional
+  twitter = "takibouyou64" # optional
   github = "tflare" # optional
