--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,10 @@
 theme="polymer"
 baseurl = "https://b.tflare.com/"
 #languageCode = "ja-jp"
-title = "hiroyuki_tの投資日記"
+title = "Hiroyuki Abeの投資日記"
 MetaDataFormat = "toml"
 paginate = 10 # optional
-copyright = "Copyright (c) 2018 - , hiroyuki_tの投資日記"
+copyright = "Copyright (c) 2018 - 2020, Hiroyuki Abeの投資日記"
 canonifyurls = true
 #publishdir = "docs"
 #disqusShortname = "http-d-tflare-com.disqus.com" # optional
